--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ transformers = "^4.44.2"
 docx2txt = "^0.8"
 cryptography = "^3.1"
 # LlamaIndex core libs
-llama-index-core = ">=0.11.2,<0.12.0"
+llama-index-core = ">=0.10.1,<0.11.0"
 llama-index-readers-file = "*"
 # Optional LlamaIndex integration libs
 llama-index-llms-llama-cpp = {version = "*", optional = true}
@@ -43,10 +43,13 @@ psycopg2-binary = {version ="^2.9.9", optional = true}
 asyncpg = {version="^0.29.0", optional = true}
 
 # ClickHouse
-clickhouse-connect = {version = "^0.7.19", optional = true}
+clickhouse-connect = {version = "^0.7.15", optional = true}
 
 # Optional Sagemaker dependency
-boto3 = {version ="^1.35.26", optional = true}
+boto3 = {version ="^1.34.139", optional = true}
+
+# Optional Qdrant client
+qdrant-client = {version ="^1.9.0", optional = true}
 
 # Optional Reranker dependencies
 torch = {version ="^2.4.1", optional = true}
