--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ jupyter = "^1.1.1"
 pypdf2 = "^3.0.1"
 pytesseract = "^0.3.13"
 pdf2image = "^1.17.0"
+black = "^24.10.0"
 
 [tool.poetry.extras]
 ui = ["gradio", "ffmpy"]
