--- a/settings.yaml
+++ b/settings.yaml
@@ -154,3 +154,7 @@ gemini:
   api_key: ${GOOGLE_API_KEY:}
   model: models/gemini-pro
   embedding_model: models/embedding-001
+
+llmsherpa:
+  api_url: "http://localhost:5010/api/parseDocument?renderFormat=all&useNewIndentParser=yes"
+  timeout: 120.0
